# gqlrs

./: .sakokuignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  code-coverage.yml  release.yml
benches/: static_schema.rs
derive/: Cargo.toml
derive/src/: args.rs  complex_interface.rs  complex_object.rs  description.rs  enum.rs  input_object.rs  interface.rs  lib.rs  merged_object.rs  merged_subscription.rs  newtype.rs  object.rs  oneof_object.rs  scalar.rs  simple_object.rs  subscription.rs  union.rs  utils.rs  validators.rs
docs/book-tests/: Cargo.toml
docs/book-tests/src/: lib.rs
docs/en/src/: SUMMARY.md  compile_times.md  dataloader.md  generic.md  merging_objects.md  subscription.md
docs/zh-CN/src/: dataloader.md  subscription.md
extras/: Cargo.toml  README.md
extras/src/extensions/: opentelemetry.rs
integrations/: README.md
integrations/actix-web/: Cargo.toml
integrations/actix-web/src/: lib.rs
integrations/actix-web/tests/: graphql.rs  test_utils.rs
integrations/axum/: Cargo.toml  README.md
integrations/axum/src/: extract.rs  lib.rs
integrations/poem/: Cargo.toml  build.rs
integrations/poem/src/: extractor.rs  lib.rs  query.rs  subscription.rs
integrations/rocket/: Cargo.toml
integrations/rocket/src/: lib.rs  rocket_impl.rs
integrations/warp/: Cargo.toml  build.rs
integrations/warp/src/: lib.rs  request.rs  subscription.rs
parser/: Cargo.toml
parser/fuzz/: Cargo.toml
parser/tests/: recursion_limit.rs
scripts/: merge_56_74.sh
src/: base.rs  context.rs  custom_directive.rs  error.rs  executor.rs  guard.rs  lib.rs  request.rs  runtime.rs  schema.rs  sendable.rs  subscription.rs
src/dataloader/: cache.rs  mod.rs
src/docs/: complex_interface.md  complex_object.md  description.md  directive.md  enum.md  input_object.md  interface.md  merged_object.md  merged_subscription.md  newtype.md  object.md  oneof_object.md  scalar.md  simple_object.md  subscription.md  union.md
src/dynamic/: check.rs  connection.rs  field.rs  input_object.rs  interface.rs  macros.rs  mod.rs  object.rs  resolve.rs  scalar.rs  schema.rs  subscription.rs  union.rs
src/extensions/: analyzer.rs  apollo_persisted_queries.rs  apollo_tracing.rs  logger.rs  mod.rs  relay_persisted_queries.rs  tracing.rs
src/http/: callback.rs  graphiql_source.rs  mod.rs  multipart_subscribe.rs  websocket.rs
src/model/: directive.rs
src/registry/: cache_control.rs  export_sdl.rs  mod.rs
src/resolver_utils/: container.rs  enum.rs  list.rs  object.rs  scalar.rs
src/types/: empty_mutation.rs  empty_subscription.rs  json.rs  maybe_undefined.rs  merged_object.rs  query_root.rs  string_number.rs  upload.rs
src/types/connection/: connection_type.rs  cursor.rs  edge.rs  mod.rs
src/validation/: mod.rs  test_harness.rs  utils.rs  visitor.rs
src/validation/visitors/: complexity.rs  depth.rs
src/validators/: mod.rs  validator_adapter.rs
tests/: batch_request.rs  binary.rs  complex_interface.rs  complex_object.rs  connection.rs  default_value.rs  derived_field.rs  description.rs  directive.rs  dynamic_schema.rs  enum.rs  error_ext.rs  error_formatter.rs  export_sdl.rs  extension.rs  federation.rs  field_features.rs  fields_merge.rs  generic_types.rs  guard.rs  hygiene.rs  input_object.rs  input_object_guard.rs  input_value.rs  interface.rs  interface_exporting.rs  introspection.rs  introspection_visible.rs  json_type.rs  lifetime.rs  list.rs  macro_context.rs  maybe_undefined.rs  merged_object.rs  mut_args.rs  mutation.rs  name_conflict.rs  no_send.rs  nullable_result.rs  object.rs  (+24 more)
tests/merge_recursion_depth/member_types/: Cargo.toml
tests/merge_recursion_depth/merged_schema/: Cargo.toml
value/: Cargo.toml
value/tests/: test_serde.rs
