[package]
authors = ["sunli <scott_s829@163.com>", "Koxiaet"]
categories = ["network-programming", "asynchronous"]
description = "Macros for gqlrs"
documentation = "https://docs.rs/gqlrs/"
edition = "2024"
homepage = "https://github.com/smartcrabai/gqlrs"
keywords = ["futures", "async", "graphql"]
license = "MIT OR Apache-2.0"
name = "gqlrs-derive"
repository = "https://github.com/smartcrabai/gqlrs"
version = "8.0.0-rc.5"

[lib]
proc-macro = true

[features]
boxed-trait = []

[dependencies]
async-graphql-parser.workspace = true

darling = "0.23.0"
heck = "0.5.0"
proc-macro-crate = "3.1.0"
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = { version = "2.0", features = ["extra-traits", "visit-mut", "visit"] }
thiserror.workspace = true
strum = { version = "0.28.0", features = ["derive"] }
