[package]
authors = ["sunli <scott_s829@163.com>", "Koxiaet"]
categories = ["network-programming", "asynchronous"]
description = "GraphQL query parser for gqlrs"
documentation = "https://docs.rs/gqlrs/"
edition = "2024"
homepage = "https://github.com/smartcrabai/gqlrs"
keywords = ["futures", "async", "graphql"]
license = "MIT OR Apache-2.0"
name = "gqlrs-parser"
repository = "https://github.com/smartcrabai/gqlrs"
version = "0.1.0"

[dependencies]
async-graphql-value.workspace = true
pest = "2.7.11"
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
pest_generator = "2.7.8"
proc-macro2 = "1.0.79"
