[package]
name = "gqlrs-value"
version = "0.1.0"
authors = ["sunli <scott_s829@163.com>", "Koxiaet"]
edition = "2024"
description = "GraphQL value for gqlrs"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/gqlrs/"
homepage = "https://github.com/smartcrabai/gqlrs"
repository = "https://github.com/smartcrabai/gqlrs"
keywords = ["futures", "async", "graphql"]
categories = ["network-programming", "asynchronous"]

[dependencies]
serde_json.workspace = true
serde.workspace = true
bytes.workspace = true
indexmap.workspace = true

[features]
raw_value = ["serde_json/raw_value"]
