[package]
authors = ["sunli <scott_s829@163.com>", "Koxiaet"]
categories = ["network-programming", "asynchronous"]
description = "gqlrs for actix-web"
documentation = "https://docs.rs/gqlrs-actix-web/"
edition = "2024"
homepage = "https://github.com/smartcrabai/gqlrs"
keywords = ["futures", "async", "graphql"]
license = "MIT OR Apache-2.0"
name = "gqlrs-actix-web"
repository = "https://github.com/smartcrabai/gqlrs"
version = "0.1.0"

[dependencies]
async-graphql = { workspace = true, features = ["tokio"] }

actix-http = "3.6.0"
actix-web = { version = "4.5.1", default-features = false, features = ["ws"] }
actix-ws = "0.4.0"
async-channel = "2.2.0"
futures-util = { version = "0.3.30", default-features = false }
tokio = { version = "1", features = ["time", "macros"] }
serde_json.workspace = true
thiserror.workspace = true

[features]
http2 = ["actix-web/http2"]
default = ["http2"]

[dev-dependencies]
async-graphql = { workspace = true, features = ["graphiql"] }
actix-rt = "2.9.0"
async-lock = "3.4.0"
serde = { version = "1", features = ["derive"] }
