[package]
authors = ["sunli <scott_s829@163.com>"]
categories = ["network-programming", "asynchronous"]
description = "gqlrs for poem"
documentation = "https://docs.rs/gqlrs-poem/"
edition = "2024"
homepage = "https://github.com/smartcrabai/gqlrs"
keywords = ["futures", "async", "graphql", "poem"]
license = "MIT OR Apache-2.0"
name = "gqlrs-poem"
repository = "https://github.com/smartcrabai/gqlrs"
version = "8.0.0-rc.5"

[dependencies]
async-graphql = { workspace = true, features = ["tokio"] }

futures-util = { workspace = true, default-features = false }
poem = { version = "3.1.10", features = ["websocket"] }
serde_json.workspace = true
tokio-util = { workspace = true, default-features = false, features = [
    "compat",
] }
mime = "0.3.17"
tokio = { version = "1.36.0", features = ["time"] }
tokio-stream = "0.1.15"
http = "1.1.0"
