[package]
authors = ["Daniel Wiesenberg <daniel@wsnbrg.de>"]
categories = ["network-programming", "asynchronous"]
description = "gqlrs for Rocket.rs"
documentation = "https://docs.rs/gqlrs-rocket/"
edition = "2024"
homepage = "https://github.com/smartcrabai/gqlrs"
keywords = ["futures", "async", "graphql", "rocket"]
license = "MIT OR Apache-2.0"
name = "gqlrs-rocket"
repository = "https://github.com/smartcrabai/gqlrs"
version = "0.1.0"

[dependencies]
async-graphql.workspace = true

rocket = { version = "0.5.0", default-features = false }
serde.workspace = true
serde_json.workspace = true
tokio-util = { workspace = true, default-features = false, features = [
  "compat",
] }
