[package]
authors = ["sunli <scott_s829@163.com>", "Koxiaet"]
categories = ["network-programming", "asynchronous"]
description = "gqlrs for warp"
documentation = "https://docs.rs/gqlrs-warp/"
edition = "2024"
homepage = "https://github.com/smartcrabai/gqlrs"
keywords = ["futures", "async", "graphql"]
license = "MIT OR Apache-2.0"
name = "gqlrs-warp"
repository = "https://github.com/smartcrabai/gqlrs"
version = "8.0.0-rc.5"

[dependencies]
async-graphql = { workspace = true, features = ["tokio"] }

futures-util = { workspace = true, default-features = false, features = [
  "sink",
] }
serde_json.workspace = true
warp = { version = "0.4", default-features = false, features = ["websocket"] }

[dev-dependencies]
asynk-strim = "0.1.5"
tokio = { version = "1.36.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "time",
] }
warp = { version = "0.4", features = ["server"] }
